@@ -1,3 +1,10 @@
+Sat, 14 Jun 2008 15:56:53 +0200 <thp@perli.net>
+Make things less verbose and fix a problem with cover art handling
+
+	* src/gpodder/gui.py: Fix problem when trying to remove a non-existent
+	podcast cover art from the cache; make things less verbose
+	* src/gpodder/*.py: Make things less verbose
+
 Sat, 14 Jun 2008 15:16:09 +0200 <thp@perli.net>
 Detect HTML and OPML content when adding a podcast subscription
 
